--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
     color: #000;
     letter-spacing: 4px;
     text-transform: uppercase;
-    margin-bottom: 60px;  /* Increase spacing below subtitle */
+    margin-bottom: 0px;  /* Increase spacing below subtitle */
+    margin-top: -80px;  
     font-family: 'Montserrat', sans-serif;
     position: relative;
     z-index: 3;
