--- a/index.html
+++ b/index.html
@@ -2055,7 +2055,7 @@
         </div>
         
         <div class="portfolio-item" data-category="seo">
-            <img src="images/Report & Performance/Business3/4.jpg" alt="Business Report 3-4" class="portfolio-image">
+            <img src="images/Report & Performance/Business3/4.png" alt="Business Report 3-4" class="portfolio-image">
             <div class="portfolio-overlay">
                 <h3 class="portfolio-title">Business Performance Report</h3>
                 <p class="portfolio-category">Report & Performance • Analytics</p>
@@ -2064,7 +2064,7 @@
         
         <!-- Report & Performance - Ranktank -->
         <div class="portfolio-item" data-category="seo">
-            <img src="images/Report & Performance/Ranktank/1.jpg" alt="Ranktank Report" class="portfolio-image">
+            <img src="images/Report & Performance/Ranktank/1.png" alt="Ranktank Report" class="portfolio-image">
             <div class="portfolio-overlay">
                 <h3 class="portfolio-title">Ranktank Performance Report</h3>
                 <p class="portfolio-category">Report & Performance • Rankings</p>
