--- a/index.html
+++ b/index.html
@@ -1559,8 +1559,8 @@
                 </p>
                 <div class="about-stats">
                     <div class="stat-card">
-                        <div class="stat-number">30+</div>
-                        <div class="stat-label">SEO Articles Monthly</div>
+                        <div class="stat-number">8</div>
+                        <div class="stat-label">SEO Articles</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-number">3.7</div>
@@ -1864,7 +1864,7 @@
         <div class="portfolio-item article-gallery-trigger" data-category="seo" data-gallery="articles">
             <img src="images/SEO:Copywriting/Article/1.png" alt="SEO Articles Gallery" class="portfolio-image">
             <div class="portfolio-overlay">
-                <h3 class="portfolio-title">30+ Monthly SEO Articles</h3>
+                <h3 class="portfolio-title"> 8 SEO Articles</h3>
                 <p class="portfolio-category">Click to view all • AI-Powered</p>
             </div>
         </div>
