--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
             </div>
             <div class="about-image">
                 <div class="profile-card">
-                    <img src="images/profile/profile.jpg" alt="Nguyen Tu Anh" class="profile-photo">
+                    <img src="images/profile/profile2.jpg" alt="Nguyen Tu Anh" class="profile-photo">
                     <div class="contact-info">
                         <div class="contact-item">
                             <div class="contact-icon">
