--- a/index.html
+++ b/index.html
@@ -2076,17 +2076,18 @@ body.loaded::before {
 <!-- CINEMATIC PORTFOLIO TRAILER - OPTIMIZED -->
 <div class="loader">
   <!-- Audio for Trailer -->
+<!-- Audio for Trailer -->
 <audio id="whoosh-sound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2022/03/10/audio_4c3f3f0a14.mp3" type="audio/mpeg">
+    <source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3" type="audio/mpeg">
 </audio>
 <audio id="impact-sound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2022/03/24/audio_1324c1c2af.mp3" type="audio/mpeg">
+    <source src="https://assets.mixkit.co/active_storage/sfx/2287/2287-preview.mp3" type="audio/mpeg">
 </audio>
 <audio id="reveal-sound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2021/08/04/audio_bb630cc098.mp3" type="audio/mpeg">
+    <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3" type="audio/mpeg">
 </audio>
 <audio id="final-sound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c610647610.mp3" type="audio/mpeg">
+    <source src="https://assets.mixkit.co/active_storage/sfx/2018/2018-preview.mp3" type="audio/mpeg">
 </audio>
 
 <!-- Mute Button (optional) -->
