--- a/index.html
+++ b/index.html
@@ -2075,19 +2075,17 @@ body.loaded::before {
 
 <!-- CINEMATIC PORTFOLIO TRAILER - OPTIMIZED -->
 <div class="loader">
-  <!-- Audio for Trailer -->
-<!-- Audio for Trailer -->
-<audio id="whoosh-sound" preload="auto">
-    <source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3" type="audio/mpeg">
+  <audio id="whoosh-sound" preload="auto">
+    <source src="sounds/whoosh.mp3" type="audio/mpeg">
 </audio>
 <audio id="impact-sound" preload="auto">
-    <source src="https://assets.mixkit.co/active_storage/sfx/2287/2287-preview.mp3" type="audio/mpeg">
+    <source src="sounds/impact.mp3" type="audio/mpeg">
 </audio>
 <audio id="reveal-sound" preload="auto">
-    <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3" type="audio/mpeg">
+    <source src="sounds/reveal.mp3" type="audio/mpeg">
 </audio>
 <audio id="final-sound" preload="auto">
-    <source src="https://assets.mixkit.co/active_storage/sfx/2018/2018-preview.mp3" type="audio/mpeg">
+    <source src="sounds/final.mp3" type="audio/mpeg">
 </audio>
 
 <!-- Mute Button (optional) -->
