--- a/index.html
+++ b/index.html
@@ -1675,12 +1675,12 @@ box-shadow: var(--shadow-md);
    ============================================ */
 
 /* Scene 1: EMAIL MARKETING - Explosive Zoom In + Flash */
-/* Scene 1: EMAIL MARKETING - Explosive Zoom In + Flash (LONGER DISPLAY) */
 .trailer-container.playing .scene-1 {
     visibility: visible;
     animation: scene1-explosive-entry 2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
     background: radial-gradient(circle at center, rgba(99, 102, 241, 0.2), rgba(236, 72, 153, 0.1), transparent);
 }
+
 
 @keyframes scene1-explosive-entry {
     0% {
@@ -1696,7 +1696,7 @@ box-shadow: var(--shadow-md);
         transform: scale(1) rotate(0deg);
         filter: brightness(1) blur(0px);
     }
-    90% {  /* Changed from 85% to 90% - stays visible longer */
+    85% {
         opacity: 1;
         transform: scale(1);
     }
@@ -1780,7 +1780,7 @@ box-shadow: var(--shadow-md);
         transform: rotateY(0deg) rotateX(0deg) scale(1.05);
         filter: brightness(1.2) blur(0);
     }
-    92% {  /* Changed from 85% to 92% - stays visible much longer */
+    85% {
         opacity: 1;
         transform: rotateY(0deg) rotateX(0deg) scale(1);
     }
@@ -1846,25 +1846,30 @@ box-shadow: var(--shadow-md);
 /* Scene 3: SEO & CONTENT - Matrix Rain Effect */
 .trailer-container.playing .scene-3 {
     visibility: visible;
-    animation: scene3-epic-reveal 4s 10s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    background: radial-gradient(circle at center, rgba(255, 184, 77, 0.25), rgba(99, 102, 241, 0.1), transparent);
+    animation: scene3-matrix 10s 10s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    background: linear-gradient(135deg, rgba(59, 130, 246, 0.15), rgba(99, 102, 241, 0.15));
 }
 
-@keyframes scene3-epic-reveal {
+@keyframes scene3-matrix {
     0% {
         opacity: 0;
-        transform: scale(0.3);
-        filter: brightness(5) blur(50px);
+        transform: translateZ(-500px) scale(0.5);
+        filter: brightness(0) contrast(0);
     }
-    30% {
+    10% {
         opacity: 1;
-        transform: scale(1.1);
-        filter: brightness(1.5) blur(0);
+        transform: translateZ(0) scale(1);
+        filter: brightness(1.5) contrast(1.2);
+    }
+    15%, 85% {
+        opacity: 1;
+        transform: translateZ(0) scale(1);
+        filter: brightness(1) contrast(1);
     }
     100% {
-        opacity: 1;
-        transform: scale(1);
-        filter: brightness(1) blur(0);
+        opacity: 0;
+        transform: translateZ(500px) scale(2);
+        filter: brightness(3) contrast(0);
     }
 }
 
@@ -1912,30 +1917,25 @@ box-shadow: var(--shadow-md);
 /* Scene 4: FINAL REVEAL - Epic Entrance */
 .trailer-container.playing .scene-4 {
     visibility: visible;
-    animation: scene4-matrix 10s 14s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    background: linear-gradient(135deg, rgba(59, 130, 246, 0.15), rgba(99, 102, 241, 0.15));
+    animation: scene4-epic-reveal 4s 20s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    background: radial-gradient(circle at center, rgba(255, 184, 77, 0.25), rgba(99, 102, 241, 0.1), transparent);
 }
 
-@keyframes scene4-matrix {
+@keyframes scene4-epic-reveal {
     0% {
         opacity: 0;
-        transform: translateZ(-500px) scale(0.5);
-        filter: brightness(0) contrast(0);
+        transform: scale(0.3);
+        filter: brightness(5) blur(50px);
     }
-    10% {
+    30% {
         opacity: 1;
-        transform: translateZ(0) scale(1);
-        filter: brightness(1.5) contrast(1.2);
-    }
-    15%, 85% {
-        opacity: 1;
-        transform: translateZ(0) scale(1);
-        filter: brightness(1) contrast(1);
+        transform: scale(1.1);
+        filter: brightness(1.5) blur(0);
     }
     100% {
-        opacity: 0;
-        transform: translateZ(500px) scale(2);
-        filter: brightness(3) contrast(0);
+        opacity: 1;
+        transform: scale(1);
+        filter: brightness(1) blur(0);
     }
 }
 
@@ -1943,8 +1943,6 @@ box-shadow: var(--shadow-md);
 .trailer-container.playing .scene-4 .final-profile {
     animation: profile-dramatic 2s 20.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
-
-
 
 @keyframes profile-dramatic {
     0% {
@@ -1993,7 +1991,6 @@ box-shadow: var(--shadow-md);
 .trailer-container.playing .scene-4 .final-tagline {
     animation: tagline-elegant 1.2s 22s ease-out both;
 }
-
 
 @keyframes tagline-elegant {
     0% {
@@ -3491,11 +3488,11 @@ window.addEventListener('load', () => {
         }
     }
     
-    // Sound timeline - SWAPPED SCENE 3 & 4
-// Whoosh: 1.5s, Impact: 7s, Final: 3s, Reveal: 10s
-function startSoundTimeline() {
+    // Sound timeline - MATCHED TO YOUR AUDIO LENGTHS
+    // Whoosh: 1.5s, Impact: 7s, Reveal: 10s, Final: 3s
+    function startSoundTimeline() {
     soundTimeouts.push(setTimeout(() => playSound(whooshSound), 200));      // Scene 1: 0.2s - Whoosh (1.5s)
-    soundTimeouts.push(setTimeout(() => playSound(impactSound), 2500));     // Scene 2: 2.5s - Impact (7s)
+    soundTimeouts.push(setTimeout(() => playSound(impactSound), 3500));     // Scene 2: 2.5s - Impact (7s)
     soundTimeouts.push(setTimeout(() => playSound(finalSound), 10000));     // Scene 3 (was 4): 10s - Final (3s) - YOUR FACE
     soundTimeouts.push(setTimeout(() => playSound(revealSound), 14000));    // Scene 4 (was 3): 14s - Reveal (10s) - SEO CONTENT
 }
