--- a/index.html
+++ b/index.html
@@ -1707,9 +1707,10 @@ box-shadow: var(--shadow-md);
     }
 }
 
-/* Scene 1 Text Animations */
+
 .trailer-container.playing .scene-1 .trailer-title {
     animation: title-slam 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    opacity: 1; /* Force stay visible */
 }
 
 @keyframes title-slam {
@@ -1722,7 +1723,7 @@ box-shadow: var(--shadow-md);
         transform: translateY(-10px) scale(1.1);
     }
     100% {
-        opacity: 1;
+        opacity: 1; /* Stay at 1 */
         transform: translateY(0) scale(1);
         filter: blur(0);
     }
@@ -1730,6 +1731,7 @@ box-shadow: var(--shadow-md);
 
 .trailer-container.playing .scene-1 .trailer-tag {
     animation: tag-slide 0.6s 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) both;
+    opacity: 1; /* Force stay visible */
 }
 
 @keyframes tag-slide {
@@ -1738,13 +1740,14 @@ box-shadow: var(--shadow-md);
         transform: translateX(-100px) rotate(-10deg);
     }
     100% {
-        opacity: 1;
+        opacity: 1; /* Stay at 1 */
         transform: translateX(0) rotate(0deg);
     }
 }
 
 .trailer-container.playing .scene-1 .trailer-subtitle {
     animation: subtitle-fade 0.8s 0.5s ease-out both;
+    opacity: 1; /* Force stay visible */
 }
 
 @keyframes subtitle-fade {
@@ -1754,7 +1757,7 @@ box-shadow: var(--shadow-md);
         letter-spacing: 10px;
     }
     100% {
-        opacity: 1;
+        opacity: 1; /* Stay at 1 */
         transform: translateY(0);
         letter-spacing: 5px;
     }
@@ -1794,6 +1797,7 @@ box-shadow: var(--shadow-md);
 /* Scene 2 Text - Typewriter + Glitch */
 .trailer-container.playing .scene-2 .trailer-title {
     animation: title-glitch 1.2s 2.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    opacity: 1; /* Force stay visible */
 }
 
 @keyframes title-glitch {
@@ -1816,17 +1820,19 @@ box-shadow: var(--shadow-md);
         filter: hue-rotate(0deg);
     }
     100% {
-        opacity: 1;
+        opacity: 1; /* Stay at 1 */
         transform: translate(0, 0) skew(0deg);
     }
 }
 
 .trailer-container.playing .scene-2 .trailer-tag {
     animation: tag-pop 0.5s 3s cubic-bezier(0.68, -0.55, 0.265, 1.55) both;
+    opacity: 1; /* Force stay visible */
 }
 
 .trailer-container.playing .scene-2 .trailer-tag:nth-child(3) {
     animation-delay: 3.2s;
+    opacity: 1; /* Force stay visible */
 }
 
 @keyframes tag-pop {
@@ -1838,8 +1844,26 @@ box-shadow: var(--shadow-md);
         transform: scale(1.2) rotate(-10deg);
     }
     100% {
-        opacity: 1;
+        opacity: 1; /* Stay at 1 */
         transform: scale(1) rotate(0deg);
+    }
+}
+
+.trailer-container.playing .scene-2 .trailer-subtitle {
+    animation: subtitle-fade-2 0.8s 3.5s ease-out both;
+    opacity: 1; /* Force stay visible */
+}
+
+@keyframes subtitle-fade-2 {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+        letter-spacing: 10px;
+    }
+    100% {
+        opacity: 1; /* Stay at 1 */
+        transform: translateY(0);
+        letter-spacing: 5px;
     }
 }
 
@@ -3491,8 +3515,8 @@ window.addEventListener('load', () => {
     // Sound timeline - MATCHED TO YOUR AUDIO LENGTHS
     // Whoosh: 1.5s, Impact: 7s, Reveal: 10s, Final: 3s
     function startSoundTimeline() {
-    soundTimeouts.push(setTimeout(() => playSound(whooshSound), 200));      // Scene 1: 0.2s - Whoosh (1.5s)
-    soundTimeouts.push(setTimeout(() => playSound(impactSound), 3500));     // Scene 2: 2.5s - Impact (7s)
+    soundTimeouts.push(setTimeout(() => playSound(whooshSound), 3000));      // Scene 1: 0.2s - Whoosh (1.5s)
+    soundTimeouts.push(setTimeout(() => playSound(impactSound), 5000));     // Scene 2: 2.5s - Impact (7s)
     soundTimeouts.push(setTimeout(() => playSound(finalSound), 10000));     // Scene 3 (was 4): 10s - Final (3s) - YOUR FACE
     soundTimeouts.push(setTimeout(() => playSound(revealSound), 14000));    // Scene 4 (was 3): 14s - Reveal (10s) - SEO CONTENT
 }
